fix: add homepage for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://danielmontoyah7.github.io/FlightStatus",
       "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
